Fix #166 Next event widget description text gets cut off

--- a/src/_assets/scss/style.scss
+++ b/src/_assets/scss/style.scss
@@ -405,9 +405,11 @@ a:focus {
   filter: invert(59%) sepia(43%) saturate(6782%) hue-rotate(331deg) brightness(106%) contrast(86%);
 }
 
-@media (max-width: 867px) {
-  .next-event-container > iframe {
-    height: 450px !important;
+.next-event__widget {
+  &:where(iframe){
+    height: 500px;
+    width: 100%;
+    overflow-x: hidden;
   }
 }
 
